Refactored content-service